Mejoras visuales generales

--- a/starweb/app/assets/stylesheets/style.css
+++ b/starweb/app/assets/stylesheets/style.css
@@ -71,7 +71,8 @@ p {
         color: #485e74; }
 
 footer {
-  background-color: #4673a7;
-  color: #ffffff; }
+  background-color: #465666;
+  color: #ffffff;
+  height: 50px; }
 
 /*# sourceMappingURL=style.css.map */
