--- a/starweb/app/assets/stylesheets/style.scss
+++ b/starweb/app/assets/stylesheets/style.scss
@@ -97,6 +97,7 @@ p {
 }
 
 footer {
-  background-color: $color-secondary;
+  background-color: #465666;
   color: $color-quaternary;
+  height: 50px;
 }
