--- a/starweb/app/views/partials/_footer.html.erb
+++ b/starweb/app/views/partials/_footer.html.erb
@@ -2,6 +2,6 @@
     </div>
 <% if user_signed_in?%>
         <!-- /#page-content-wrapper -->
-        <footer class="text-center p-3">&copy StarWeb - 2019</footer>
+        <footer class="text-center p-3 fixed-bottom">&copy StarWeb - 2019</footer>
     </div>
 <%end%>
