--- a/starweb/app/views/users/_form.html.erb
+++ b/starweb/app/views/users/_form.html.erb
@@ -1,6 +1,6 @@
 <p>
-<%= p.label 'Nivel de permisos' %> </br>
-<%= p.text_field :permission_level %>
+<h3><%= p.label 'Nivel de permisos' %></h3>
+<%= p.text_field :permission_level, class: "form-control" %>
 </p>
 <p>
 <%= p.submit "Guardar", class: 'btn btn-primary' %>
