--- a/starweb/app/views/users/index.html.erb
+++ b/starweb/app/views/users/index.html.erb
@@ -1,12 +1,13 @@
-<div class="header"> 
-  <h1 class="page-header">
-    Usuarios
-  </h1>
+<h1>Usuarios</h1>
+<nav aria-label="breadcrumb">
   <ol class="breadcrumb">
-    <li><a href="#">Usuarios</a></li>
-    <li class="active">Index</li>
-  </ol> 
+    <li class="breadcrumb-item"><a href="#">Usuarios</a></li>
+    <li class="breadcrumb-item active" aria-current="page">Index</li>
+  </ol>
+</nav>
 </div>
+<hr>
+
 
 <div id="page-inner">
   <div class="row">
