--- a/starweb/app/views/devise/invitations/new.html.erb
+++ b/starweb/app/views/devise/invitations/new.html.erb
@@ -1,27 +1,28 @@
-<div class="header"> 
-  <h1 class="page-header">
-    Nuevo usuario
-  </h1>
+<h1>Usuarios</h1>
+<nav aria-label="breadcrumb">
   <ol class="breadcrumb">
-    <li><a href="">Usuarios</a></li>
-    <li><%= link_to "Index", users_index_path %></li>
-    <li class="active">Nuevo</li>
-  </ol> 
+    <li class="breadcrumb-item"><a href="#">Usuarios</a></li>
+        <li class="breadcrumb-item"><%= link_to "Index", users_index_path %></li>
+    <li class="breadcrumb-item active" aria-current="page">Nuevo</li>
+  </ol>
+</nav>
 </div>
+<hr>
+
 <div id="page-inner">
   <div class="row">
     <div class="col-md-12">
-      <h5>Enviar invitación</h5><br>
+      <h3>Enviar invitación</h3>
       <%= form_for(resource, as: resource_name, url: invitation_path(resource_name), html: { method: :post }) do |f| %>
       <%= render "devise/shared/error_messages", resource: resource %>
 
       <% resource.class.invite_key_fields.each do |field| -%>
       <div class="field">
         <%= f.label field %><br />
-        <%= f.text_field field %>
+        <%= f.text_field field, class: 'form-control' %>
       </div>
-      <% end -%>
-
+      <% end %>
+      <br>
       <div class="actions">
         <%= f.submit "Enviar", class: 'btn btn-primary' %>
       </div>
