--- a/starweb/app/assets/stylesheets/style.css
+++ b/starweb/app/assets/stylesheets/style.css
@@ -22,11 +22,17 @@ p {
   padding: .10rem 1.25rem;
   font-size: 15px; }
 
+.alert {
+  padding: .75rem .25rem; }
+
 .card {
   text-align: center;
   display: inline-block;
   margin-bottom: 15px;
   border: 1px solid #5f7c9a; }
+
+.card-body {
+  padding: 5px; }
 
 .bg-light {
   background-color: #4673a7 !important;
