--- a/starweb/app/views/orders/show.html.erb
+++ b/starweb/app/views/orders/show.html.erb
@@ -1,105 +1,134 @@
-<div class="header">
-  <h1 class="page-header">
-    Pedidos
-  </h1>
+<h1>Pedidos</h1>
+<nav aria-label="breadcrumb">
   <ol class="breadcrumb">
-    <li><a href="">Pedidos</a></li>
-    <li><%= link_to "Index", orders_path %></li>
-    <li class="active">Ver</li>
+    <li class="breadcrumb-item"><a href="#">Pedidos</a></li>
+        <li class="breadcrumb-item"><%= link_to "Index", orders_path %></li>
+    <li class="breadcrumb-item active" aria-current="page">Detalles</li>
   </ol>
+</nav>
 </div>
-
+<hr>
 <div id="page-inner">
   <% if current_user.is_secretary? %>
   <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalProduct"> Agregar producto </button>
 
   <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalOrderDetail">Agregar detalles</button>
 
-  <%= link_to 'Editar', edit_order_path(@order), class: 'btn btn-primary' %>
+  <%= link_to 'Editar', edit_order_path(@order), class: 'btn btn-light' %>
   <%end%>
-
-  <div class="row">
-    <div class="col-md-12">
-      <div class="col-md-6">
-                  <h4>Principal</h4>
+  <div class="row mt-4">
+    <div class="col-md-6">
+      <div class="row">
+        <div class="col-md-6 col-sm-12">
+          <h4>Pedido</h4>
           <hr>
-        <div class="col-md-6">
-            <label><b>Fecha de entrega:</b> <br><%= @order.deliver_date %></label><br>
-
-            <label><b>Cliente:</b> <br>
-              <%= @order.client.firstname %>
-              <%= @order.client.lastname %> - 
-              <%= @order.client.doc_ruc %>
-            </label><br>
-            
-            <label><b>Curso / Club:</b> <br><%= @order.course_club %></label><br>
-          </div>
-          <div class="col-md-6">
-            <label><b>Logo:</b> <br><%= image_tag @order.logo.url(:thumb) %></label><br>
-
-            <label><b>Estado:</b> <br><%= @order.state %></label><br>
-
-            <label><b>Notas:</b> <br><%= @order.notes %></label><br>
-          </p>
-        </div>
-      </div>
-
-      <div class="col-md-6"> 
-        <h4>Productos</h4>
-        <hr>
-        <% @order.products.each do |product| %>
-        <% if @order.products.empty? %>
-        <p>No ha agregado ningún producto</p>
-        <% else %>
-        <div class="media">
-          <div class="media-left media-middle">
-            <a href="#">
-              <%= image_tag product.image.url(:thumb), class: 'media-object' %>
-            </a>
-          </div>
-          <div class="media-body">
-            <h5 class="media-heading"><%= product.name %></h5>
-            <% @order.has_products.each do |hasProduct| %>
-            <p><%= hasProduct.specs_f %></p>
-            <p><%= hasProduct.specs_b %></p>
-            <p><%= hasProduct.quantity %></p>
-            <p><%= hasProduct.color %></p>
-            <p><%= image_tag hasProduct.design.url(:thumb) %></p>
-            <%end%>
+          <div class="card col-md-12">
+            <div class="card-body">
+              <p class="card-text">
+                <b>Fecha de entrega</b><br><%= @order.deliver_date %>
+              </p>
+              <p>
+                <b>Estado</b>
+                <% if @order.state == 'En espera' %>
+                  <p class='alert alert-danger'><%= @order.state %></p>
+                <% elsif @order.state == 'En proceso' %>
+                  <p class='alert alert-warning'><%= @order.state %>
+                <% else @order.state == 'Completado' %>
+                  <p class='alert alert-success'><%= @order.state %></p>
+                <%end%>
+              </p>
+              <p>
+                <b>Notas</b><br><%= @order.notes %>
+              </p>
+            </div>
           </div>
         </div>
-        <hr>
-        <%end%>
+        <div class="col-md-6 col-sm-12">
+          <h4>Cliente</h4>
+          <hr>
+          <div class="card col-md-12">
+            <div class="card-body">
+              <p class="card-text">
+                <b>Nombre y Apellido</b><br><%= @order.client.firstname %>
+                <%= @order.client.lastname %> 
+              </p>
+              <p class="card-text">
+                <b>Documento - RUC</b><br>
+                <%= @order.client.doc_ruc %>
+              </p>
+              <p class="card-text"s>
+                <b>Curso / Club</b> <br><%= @order.course_club %>
+              </p>
+              <p class="card-text"s>
+                <b>Logo:</b> <br><%= image_tag @order.logo.url(:thumb) %>
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
-      <%end%>
-      <h4>Detalles</h4>     
-      <% if @order.order_details.empty? %>
-      <p>No ha agregado ningún detalle</p>
+      <div class="row">
+       <div class="col-md-12">
+        <hr>
+          <h4>Detalles</h4>     
+          <% if @order.order_details.empty? %>
+            <p>No ha agregado ningún detalle</p>
+          <% else %>
+            <div class="table-responsive">
+              <table class="table table-striped table-bordered table-hover">
+                <thead>
+                  <tr>
+                    <th>Nombre</th>
+                    <th>Número</th>
+                    <th>Tamaño</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <% @order.order_details.each do |order_detail| %>   
+                  <tr>
+                    <td><%= order_detail.name %></td>
+                    <td><%= order_detail.number %></td>
+                    <td><%= order_detail.size %><br> 
+                    <td style="width: 20px;"><%= link_to '' , order_detail, method: :delete, data: { confirm: 'Estás seguro?' }, class: "fas fa-trash"  %></td>
+                    </tr>
+                    <% end %>
+                  </tbody>
+                </table>
+              </div>
+              <%end%>
+            </div>
+        <br>
+        </div>
+    </div>
+
+    <div class="col-md-6">
+      <h4>Productos</h4>
+      <hr>
+      <% @order.has_products.each do |hasProduct| %>
+      <% if @order.has_products.empty? %>
+      <p>No ha agregado ningún producto</p>
       <% else %>
-      <div class="table-responsive">
-        <table class="table table-striped table-bordered table-hover">
-          <thead>
-            <tr>
-              <th>Nombre</th>
-              <th>Número</th>
-              <th>Tamaño</th>
-            </tr>
-          </thead>
-          <tbody>
-            <% @order.order_details.each do |order_detail| %>   
-            <tr>
-              <td><%= order_detail.name %></td>
-              <td><%= order_detail.number %></td>
-              <td><%= order_detail.size %><br> 
-              <td style="width: 20px;"><%= link_to '' , order_detail, method: :delete, data: { confirm: 'Estás seguro?' }, class: "fas fa-trash"  %></td>
-              </tr>
-              <% end %>
-            </tbody>
-          </table>
+      <div class="card col-md-12">
+        <div class="row no-gutters">
+          <div class="col-md-4">
+            <%= image_tag hasProduct.product.image.url(:thumb), class: 'card-img' %>
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title"><b><%= hasProduct.product.name %></b>   </h5>
+              <p class="card-text">
+                <p><b>Frontal</b> <br><%= hasProduct.specs_f %></p>
+                <p><b>Dorso</b> <br><%= hasProduct.specs_b %></p>
+                <p><b>Cantidad</b> <br><%= hasProduct.quantity %></p>
+                <p><b>Color</b> <br><%= hasProduct.color %></p>
+            </p>
+          </div>
         </div>
-        <%end%>
+      <%end%>
       </div>
     </div>
+    <%end%>
+    </div>
+  </div>
 
     <!-- Modal -->
     <div class="modal fade" id="modalProduct" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
